--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "./server.js",
   "dependencies": {
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "6.15.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -9,7 +14,13 @@
     "helmet": "^8.1.0",
     "init": "^0.1.2",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.11",
     "pdf-parse": "^2.4.5",
-    "prisma": "^7.1.0"
-  }
+    "prisma": "6.15.0"
+  },
+  "scripts": {
+    "dev": "nodemon ./server.js"
+  },
+  "type": "module"
 }
